--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 footer > p {
-    font-weight: bold;
+    font-weight: var(--bold-font-weight);
     padding: 10px 0;
     margin: 0 0 0 480px;
-    font-size: 14px;
+    font-size: var(--body-font-size);
 }
