--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -24,9 +24,9 @@
 .nav-container > ul {
     display: flex;
     list-style: none;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 700;
+    font-size: var(--button-font-size);
+    line-height: var(--button-line-height);
+    font-weight: var(--bold-font-weight);
     margin: 30px 0 0 0;
 }
 
