--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -4,14 +4,14 @@
 
 .projects-component-container > h2 {
     color: var(--light-blue-color);
-    font-weight: bold;
-    font-size: 28px;
+    font-weight: var(--bold-font-weight);
+    font-size: var(--h2-font-size);
     margin: 0;
 }
 
 .projects-component-container > p {
     color: var(--white-color);
-    font-size: 16px;
+    font-size: var(--h6-font-size);
     margin: 0 0 24px 0;
 }
 
@@ -34,14 +34,14 @@
 .project-intro > h3 {
     margin: 10px 10px 0 0;
     color: var(--light-blue-color);
-    font-size: 24px;
+    font-size: var(--h3-font-size);
     padding-bottom: 2px;
 }
 
 .project-intro > p {
     color: var(--white-color);
     margin: 0 10px 0 0;
-    font-size: 16px;
+    font-size: var(--body-font-size);
 }
 
 .project-img {
