--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,3 +4,8 @@ footer > p {
     margin: 0 0 0 480px;
     font-size: var(--body-font-size);
 }
+
+.hannah-moore-link:any-link {
+    font-weight: var(--bold-font-weight);
+    color: var(--black-color);
+}
