--- a/src/components/Tag.css
+++ b/src/components/Tag.css
@@ -4,6 +4,7 @@
     background-color: var(--light-blue-color);
     border-radius: 8px;
     padding: 6px 12px;
+    align-self: center;
 }
 
 .caption > h6 {
