--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ body {
   width: 100%;
 }
 
-@media (max-width: 1920px) {
+@media (max-width: 1919px) {
   .content,
   .nav-container,
   footer > p {
@@ -53,7 +53,7 @@ body {
   }
 }
 
-@media (max-width: 1575px) {
+@media (max-width: 1439px) {
   .content,
   .nav-container,
   footer > p {
@@ -61,7 +61,7 @@ body {
   }
 }
 
-@media (max-width: 1175px) {
+@media (max-width: 1023px) {
   .content,
   .nav-container,
   footer > p {
@@ -69,7 +69,7 @@ body {
   }
 }
 
-@media (max-width: 1035px) {
+@media (max-width: 800px) {
   header {
     padding: 189px 0 120px 0;
   }
@@ -80,9 +80,6 @@ body {
   .project {
     padding-left: 10px;
     grid-template-rows: none;
-  }
-  .tag-container {
-    flex-wrap: wrap;
   }
   .project-btn {
     align-self: center;
@@ -117,5 +114,14 @@ body {
   }
   footer > p {
     font-size: 14px;
+  }
+  .desktop-nav {
+    display: none;
+  }
+  .mobile-nav {
+    display: block;
+  }
+  #exitButton {
+    color: var(--black-color);
   }
 }
