add logo into overlay menu for mobile

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -114,3 +114,9 @@ a:any-link {
     text-decoration: none;
     cursor: pointer;
 }
+
+.mobilelogo {
+    position: absolute;
+    top: 0;
+    left: 3em;
+}
