--- a/src/App.css
+++ b/src/App.css
@@ -97,6 +97,10 @@ body {
   .img-row {
     gap: 6px;
     flex-direction: row;
+    margin: auto;
+  }
+  .img-row > img {
+    width: 144px;
   }
   .about-me-img-container {
     display: flex;
@@ -123,5 +127,15 @@ body {
   }
   #exitButton {
     color: var(--black-color);
+  }
+}
+
+@media (max-width: 320px) {
+  footer > p {
+    font-size: 11px;
+    padding: 12px 0;
+  }
+  .img-row > img {
+    width: 109px;
   }
 }
