--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,7 @@ body {
   }
   .about-me-wrapper {
     margin: auto;
-    width: fit-content;
+    width: 100%;
   }
   .img-row {
     gap: 6px;
@@ -122,7 +122,7 @@ body {
 
 @media (max-width: 425px) {
   .img-row img {
-    width: 161px;
+    width: 135px;
   }
   footer > p {
     font-size: 11px;
@@ -131,7 +131,7 @@ body {
 
 @media (max-width: 375px) {
   .img-row img {
-    width: 136px;
+    width: 135px;
   }
   footer > p {
     font-size: 11px;
@@ -140,7 +140,7 @@ body {
 
 @media (max-width: 320px) {
   .img-row img {
-    width: 109px;
+    width: 100px;
   }
   footer > p {
     font-size: 11px;
